<resources>
    <string name="app_name">Fein BLE</string>

    <string name="start_scan">Start scan</string>
    <string name="stop_scan">Stop scan</string>
    <string name="connect_fail">Connection fail</string>
    <string name="disconnected">Disconnected</string>
    <string name="please_open_blue">Please open Bluetooth</string>
    <string name="name">Name</string>
    <string name="mac">MAC:</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>

    <string name="notifyTitle">Title</string>
    <string name="gpsNotifyMsg">Please turn on gps</string>
    <string name="setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="command">Command</string>
    <string name="device_info">Device Info</string>
</resources>
